# blog-os-cn

./: README.md  play.sh
01-freestanding-rust-binary/: Cargo.toml  README.md  rust-toolchain
01-freestanding-rust-binary/src/: main.rs
02-minimal-rust-kernel/: Cargo.toml
02-minimal-rust-kernel/.cargo/: config
02-minimal-rust-kernel/src/: main.rs
03-vga-text-mode/: Cargo.toml
03-vga-text-mode/src/: main.rs  vga_buffer.rs
04-testing/: Cargo.toml  README.md
04-testing/src/: lib.rs  main.rs  vga_buffer.rs
04-testing/tests/: should_panic.rs
05-cpu-exceptions/: Cargo.toml
05-cpu-exceptions/.cargo/: config
05-cpu-exceptions/src/: interrupts.rs  lib.rs  main.rs  vga_buffer.rs
05-cpu-exceptions/tests/: basic_boot.rs  should_panic.rs
06-double-faults/: Cargo.toml  README.md
06-double-faults/src/: interrupts.rs  lib.rs  main.rs
07-hardware-interrupts/: Cargo.toml
07-hardware-interrupts/src/: interrupts.rs  lib.rs  main.rs  vga_buffer.rs
08-paging-introduction/: Cargo.toml
08-paging-introduction/src/: main.rs
09-paging-implementation/: Cargo.toml  README.md
09-paging-implementation/src/: lib.rs  main.rs  memory.rs
10-heap-allocation/: Cargo.toml  README.md
10-heap-allocation/.cargo/: config
10-heap-allocation/src/: allocator.rs  gdt.rs  lib.rs  main.rs  memory.rs
10-heap-allocation/tests/: heap_allocation.rs  stack_overflow.rs
11-allocator-designs/: Cargo.toml
11-allocator-designs/.cargo/: config
11-allocator-designs/src/: allocator.rs  interrupts.rs  lib.rs  memory.rs
11-allocator-designs/src/allocator/: bump.rs  fixed_size_block.rs  linked_list.rs
11-allocator-designs/tests/: heap_allocation.rs
11-async-await/blog-os/: Cargo.toml
11-async-await/blog-os/src/: interrupts.rs  lib.rs  main.rs
11-async-await/blog-os/src/task/: executor.rs  keyboard.rs  mod.rs  simple_executor.rs
11-async-await/heap-values/: Cargo.toml
11-async-await/heap-values/src/: main.rs
11-async-await/pin-unpin/src/: main.rs
11-async-await/working-with-futures/src/: main.rs
12-async-await/blog-os/: Cargo.toml  README.md
12-async-await/blog-os/.cargo/: config
12-async-await/blog-os/src/: lib.rs
12-async-await/blog-os/src/task/: executor.rs  keyboard.rs
12-async-await/pin-unpin/: Cargo.toml
12-async-await/pin-unpin/src/: main.rs
12-async-await/working-with-futures/: Cargo.toml
