[package]
name = "blog-os"
version = "0.1.0"
authors = ["sammyne <lixiangmin01@baidu.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
linked_list_allocator   = "0.8.0"
pc-keyboard             = "0.5.0"
pic8259_simple          = "0.2.0"
rlibc                   = "1.0.0"
spin                    = "0.5.2"
x86_64                  = "0.11.0"
uart_16550              = "0.2.0"
volatile                = "0.2.6"

[dependencies.bootloader]
features    = ["map_physical_memory"]
version     = "0.9.8"

[dependencies.lazy_static]
version = "1.4"
features = ["spin_no_std"]

[package.metadata.bootimage]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio",
    "-display", "none"
]
test-success-exit-code = 33         # (0x10 << 1) | 1

[[test]]
name = "stack_overflow"
harness = false
